base/src/test/resources/failure/tyck/issue300.aya.txt
In file $FILE:6:35 ->

  4 |   | (zero, b), unit x => b
  5 |   | (a, zero), y => a
  6 |   | (suc a, suc b), unit y => suc (max (a, b))
                                         ^--------^

Error: Expected type: Nat
       Normalized: Nat
       Actual type: Π (b : Unit) → Nat
       Normalized: Π (b : Unit) → Nat
       They don't match, sorry
What are you doing?
